kubernetes/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.103.0/24
spec:
  rules:
  - host: argocd.k8s.home.var1able.ru
    http:
      paths:
      - backend:
          service:
           name: argocd-server
           port: 
            name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.k8s.home.var1able.ru
    secretName: argocd-secret # do not change, this is provided by Argo CD
